TAPD service tests validation