@@ -10,6 +10,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.annotation.DirtiesContext;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
@@ -27,7 +28,7 @@ public class TapdDecodeServiceTest {
 
     @Test
     @DisplayName("decode()")
-    public void decodeTest() {
+    public void decode() {
         final String ROYLLO_COIN_RAW_PROOF = UNLIMITED_ROYLLO_COIN_1_FROM_TEST.getDecodedProofRequest(0).getRawProof();
 
         // Value coming from the server.
@@ -35,11 +36,11 @@ public class TapdDecodeServiceTest {
         assertNotNull(response);
 
         // Value coming from our test data.
-        final DecodedProofValue decodedProofValueFromTest = UNLIMITED_ROYLLO_COIN_1_FROM_TEST.getDecodedProofValuesWithoutMetaReveal().get(0);
+        final DecodedProofValue decodedProofValueFromTest = UNLIMITED_ROYLLO_COIN_1_FROM_TEST.getDecodedProofValuesWithoutMetaReveal().getFirst();
         assertNotNull(decodedProofValueFromTest);
 
         // =============================================================================================================
-        // Testing all the value from the response with what we have in test data.
+        // Testing the value from the response with the value in test data.
 
         // Errors.
         assertNull(response.getErrorCode());
@@ -89,26 +90,30 @@ public class TapdDecodeServiceTest {
     public void proofAtDepthTest() {
         final String TRICKY_ROYLLO_COIN_3_RAW_PROOF = TRICKY_ROYLLO_COIN_FROM_TEST.getDecodedProofRequest(2).getRawProof();
 
-        final DecodedProofResponse response1 = tapdService.decode(TRICKY_ROYLLO_COIN_3_RAW_PROOF, 0, false).block();
-        assertNotNull(response1);
-        assertEquals(2, response1.getDecodedProof().getNumberOfProofs());
-        assertEquals(0, response1.getDecodedProof().getProofAtDepth());
+        assertThat(tapdService.decode(TRICKY_ROYLLO_COIN_3_RAW_PROOF, 0, false).block())
+                .isNotNull()
+                .satisfies(response -> {
+                    assertEquals(2, response.getDecodedProof().getNumberOfProofs());
+                    assertEquals(0, response.getDecodedProof().getProofAtDepth());
+                });
 
-        final DecodedProofResponse response2 = tapdService.decode(TRICKY_ROYLLO_COIN_3_RAW_PROOF, 1, false).block();
-        assertNotNull(response2);
-        assertEquals(2, response1.getDecodedProof().getNumberOfProofs());
-        assertEquals(1, response2.getDecodedProof().getProofAtDepth());
+        assertThat(tapdService.decode(TRICKY_ROYLLO_COIN_3_RAW_PROOF, 1, false).block())
+                .isNotNull()
+                .satisfies(response -> {
+                    assertEquals(2, response.getDecodedProof().getNumberOfProofs());
+                    assertEquals(1, response.getDecodedProof().getProofAtDepth());
+                });
     }
 
     @Test
     @DisplayName("decode() on tapd with an invalid proof")
     public void decodeErrorTest() {
-        final DecodedProofResponse response = tapdService.decode("INVALID_PROOF").block();
-
-        // Testing errors.
-        assertNotNull(response);
-        assertNotNull(response.getErrorCode());
-        assertNotNull(response.getErrorMessage());
+        assertThat(tapdService.decode("INVALID_PROOF").block())
+                .isNotNull()
+                .satisfies(decodedProofResponse -> {
+                    assertNotNull(decodedProofResponse.getErrorCode());
+                    assertNotNull(decodedProofResponse.getErrorMessage());
+                });
     }
 
     @Test
@@ -119,41 +124,54 @@ public class TapdDecodeServiceTest {
         // Proof file 1.
         // Issuance proof with meta reveal ==> We should be able to get the meta information.
         final String issuanceProof1 = TRICKY_ROYLLO_COIN_FROM_TEST.getDecodedProofRequest(0).getRawProof();
-        DecodedProofResponse response = tapdService.decode(issuanceProof1, 0, true).block();
-        assertNotNull(response);
-        assertNull(response.getErrorCode());
-        assertNotNull(response.getDecodedProof().getMetaReveal());
-        assertEquals("747269636b79526f796c6c6f436f696e20627920526f796c6c6f", response.getDecodedProof().getMetaReveal().getData());
-        assertEquals("META_TYPE_OPAQUE", response.getDecodedProof().getMetaReveal().getType());
-        assertEquals("13a16f12767ad6fbafcfd69fd12fc19747ac35749b1b6806c74dd4a07d2e4b41", response.getDecodedProof().getMetaReveal().getMetaHash());
-        assertTrue(response.getDecodedProof().getAsset().isIssuance());
+        assertThat(tapdService.decode(issuanceProof1, 0, true).block())
+                .isNotNull()
+                .satisfies(response -> {
+                    assertNull(response.getErrorCode());
+                    assertNotNull(response.getDecodedProof().getMetaReveal());
+                    assertEquals("747269636b79526f796c6c6f436f696e20627920526f796c6c6f", response.getDecodedProof().getMetaReveal().getData());
+                    assertEquals("META_TYPE_OPAQUE", response.getDecodedProof().getMetaReveal().getType());
+                    assertEquals("13a16f12767ad6fbafcfd69fd12fc19747ac35749b1b6806c74dd4a07d2e4b41", response.getDecodedProof().getMetaReveal().getMetaHash());
+                    assertTrue(response.getDecodedProof().getAsset().isIssuance());
+                });
 
         // If we do the same without asking for meta reveal, we should not get it.
-        response = tapdService.decode(issuanceProof1, 0, false).block();
-        assertNotNull(response);
-        assertNull(response.getErrorCode());
-        assertNull(response.getDecodedProof().getMetaReveal());
+        assertThat(tapdService.decode(issuanceProof1, 0, false).block())
+                .isNotNull()
+                .satisfies(response -> {
+                    assertNull(response.getErrorCode());
+                    assertNull(response.getDecodedProof().getMetaReveal());
+                    assertTrue(response.getDecodedProof().getAsset().isIssuance());
+                });
 
         // Proof file 2.
         // We get the proof file 2 (with two proofs) and we decode the last one, which is the issuance proof.
         final String issuanceProof2 = TRICKY_ROYLLO_COIN_FROM_TEST.getDecodedProofRequest(1).getRawProof();
-        response = tapdService.decode(issuanceProof2, 1, true).block();
-        assertNotNull(response);
-        assertNull(response.getErrorCode());
-        assertNotNull(response.getDecodedProof().getMetaReveal());
-        assertEquals("747269636b79526f796c6c6f436f696e20627920526f796c6c6f", response.getDecodedProof().getMetaReveal().getData());
-        assertEquals("META_TYPE_OPAQUE", response.getDecodedProof().getMetaReveal().getType());
-        assertEquals("13a16f12767ad6fbafcfd69fd12fc19747ac35749b1b6806c74dd4a07d2e4b41", response.getDecodedProof().getMetaReveal().getMetaHash());
+        assertThat(tapdService.decode(issuanceProof2, 1, true).block())
+                .isNotNull()
+                .satisfies(response -> {
+                    assertNull(response.getErrorCode());
+                    assertNotNull(response.getDecodedProof().getMetaReveal());
+                    assertEquals("747269636b79526f796c6c6f436f696e20627920526f796c6c6f", response.getDecodedProof().getMetaReveal().getData());
+                    assertEquals("META_TYPE_OPAQUE", response.getDecodedProof().getMetaReveal().getType());
+                    assertEquals("13a16f12767ad6fbafcfd69fd12fc19747ac35749b1b6806c74dd4a07d2e4b41", response.getDecodedProof().getMetaReveal().getMetaHash());
+                    assertTrue(response.getDecodedProof().getAsset().isIssuance());
+                });
 
         // If we get a transfer proof, we should not get the meta reveal and have a code error instead.
-        response = tapdService.decode(issuanceProof2, 0, true).block();
-        assertNotNull(response);
-        assertNotNull(response.getErrorCode());
+        assertThat(tapdService.decode(issuanceProof2, 0, true).block())
+                .isNotNull()
+                .satisfies(response -> {
+                    assertNotNull(response.getErrorCode());
+                    assertNotNull(response.getErrorMessage());
+                });
 
         // But we should not have a problem if we set meta reveal to false.
-        response = tapdService.decode(issuanceProof2, 1, false).block();
-        assertNotNull(response);
-        assertNull(response.getErrorCode());
+        assertThat(tapdService.decode(issuanceProof2, 1, false).block())
+                .isNotNull()
+                .satisfies(response -> {
+                    assertNull(response.getErrorCode());
+                });
     }
 
 }
