@@ -8,6 +8,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.annotation.DirtiesContext;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -16,15 +17,30 @@ import static org.royllo.explorer.core.util.enums.ProofType.PROOF_TYPE_TRANSFER;
 
 @SpringBootTest
 @DirtiesContext
-@DisplayName("Lightning TAPD universe leaves service test")
+@DisplayName("TAPD universe leaves service test")
 public class TapdUniverseLeavesServiceTest {
 
     @Autowired
     private TapdService tapdService;
 
     @Test
-    @DisplayName("getUniverseLeaves() on lightning TAPD")
-    public void getUniverseLeavesTest() {
+    @DisplayName("getUniverseLeaves()")
+    public void getUniverseLeaves() {
+        // =============================================================================================================
+        // Constraint tests.
+
+        // With a wrong asset ID value;
+        assertThat(tapdService.getUniverseLeaves("https://testnet.universe.lightning.finance",
+                "NON_EXISTING_ASSET_ID", PROOF_TYPE_ISSUANCE).block())
+                .isNotNull()
+                .satisfies(response -> {
+                    assertEquals(2, response.getErrorCode());
+                    assertEquals("encoding/hex: invalid byte: U+004E 'N'", response.getErrorMessage());
+                });
+
+        // =============================================================================================================
+        // Normal behavior tests.
+
         // Asset ID on the mainnet with https://universe.lightning.finance
         // 37b884f6aeab1a820a37aba8a8099b2118aff6dcf5e5ed6836d3d0251c4ccdde
         //
@@ -38,30 +54,18 @@ public class TapdUniverseLeavesServiceTest {
         UniverseLeavesResponse insuranceResponse = tapdService.getUniverseLeaves(server, assetId, PROOF_TYPE_ISSUANCE).block();
         assertNotNull(insuranceResponse);
         assertEquals(1, insuranceResponse.getLeaves().size());
-        assertNotNull(insuranceResponse.getLeaves().get(0));
-        assertNotNull(insuranceResponse.getLeaves().get(0).getProof());
+        assertNotNull(insuranceResponse.getLeaves().getFirst());
+        assertNotNull(insuranceResponse.getLeaves().getFirst().getProof());
 
         // transfer proof.
         UniverseLeavesResponse transferResponse = tapdService.getUniverseLeaves(server, assetId, PROOF_TYPE_TRANSFER).block();
         assertNotNull(transferResponse);
         assertEquals(1, transferResponse.getLeaves().size());
-        assertNotNull(transferResponse.getLeaves().get(0));
-        assertNotNull(transferResponse.getLeaves().get(0).getProof());
+        assertNotNull(transferResponse.getLeaves().getFirst());
+        assertNotNull(transferResponse.getLeaves().getFirst().getProof());
 
         // Checking it's not the same data.
-        assertNotEquals(insuranceResponse.getLeaves().get(0).getProof(), transferResponse.getLeaves().get(0).getProof());
-    }
-
-    @Test
-    @DisplayName("getUniverseLeaves() with wrong value on lightning TAPD")
-    public void getUniverseLeavesWithWrongValueTest() {
-        UniverseLeavesResponse response = tapdService.getUniverseLeaves("https://testnet.universe.lightning.finance",
-                "NON_EXISTING_ASSET_ID", PROOF_TYPE_ISSUANCE).block();
-
-        // Testing the response (error).
-        assertNotNull(response);
-        assertEquals(2, response.getErrorCode());
-        assertEquals("encoding/hex: invalid byte: U+004E 'N'", response.getErrorMessage());
+        assertNotEquals(insuranceResponse.getLeaves().getFirst().getProof(), transferResponse.getLeaves().getFirst().getProof());
     }
 
 }
